--- a/index.html
+++ b/index.html
@@ -16,12 +16,13 @@
         <p class="lede">
           Upload your picture, place it behind the campaign frame, preview it live, and download the final artwork.
         </p>
+        <button id="guideBtn" class="btn tonal">Show guide</button>
       </div>
     </header>
 
     <section class="panel">
       <div class="controls">
-        <label class="file-picker" id="dropZone">
+        <label class="file-picker" id="dropZone" data-tour="upload">
           <input type="file" id="photoInput" accept="image/*">
           <span class="cta">Upload your photo</span>
           <span class="hint">Drag & drop or click. PNG or JPG, square works best.</span>
@@ -29,92 +30,132 @@
 
         <div class="frame-select">
           <label for="frameChooser">Frame</label>
-          <select id="frameChooser">
+          <select id="frameChooser" data-tour="frame">
             <option value="assets/cambodia-frame.svg">#WeWillNeverForgetOurHero</option>
           </select>
         </div>
 
-        <div class="tool-card">
-          <div class="tool-header">
+        <details class="tool-card accordion" open data-tour="photo-controls">
+          <summary class="accordion-summary">
             <div>
               <p class="tool-title">Photo controls</p>
               <p class="tool-desc">Zoom, rotate, drag to fit inside the frame.</p>
             </div>
-          </div>
-          <div class="range-row">
-            <label for="photoZoom">Zoom</label>
-            <input type="range" id="photoZoom" min="50" max="200" value="100">
-            <span class="value" id="photoZoomValue">100%</span>
-          </div>
-          <div class="range-row">
-            <label for="photoRotate">Rotation</label>
-            <input type="range" id="photoRotate" min="-180" max="180" value="0">
-            <span class="value" id="photoRotateValue">0°</span>
-          </div>
-          <div class="toggle-row">
-            <label class="switch">
-              <input type="checkbox" id="blurToggle">
-              <span class="slider"></span>
-            </label>
-            <div class="toggle-copy">
-              <p class="toggle-title">Blur background</p>
-              <p class="toggle-sub">Soft blur before the frame overlay.</p>
+            <span class="caret">▾</span>
+          </summary>
+          <div class="accordion-body">
+            <div class="range-row">
+              <label for="photoZoom">Zoom</label>
+              <input type="range" id="photoZoom" min="50" max="200" value="100">
+              <span class="value" id="photoZoomValue">100%</span>
             </div>
+            <div class="range-row">
+              <label for="photoRotate">Rotation</label>
+              <input type="range" id="photoRotate" min="-180" max="180" value="0">
+              <span class="value" id="photoRotateValue">0°</span>
+            </div>
+            <div class="toggle-row">
+              <label class="switch">
+                <input type="checkbox" id="blurToggle">
+                <span class="slider"></span>
+              </label>
+              <div class="toggle-copy">
+                <p class="toggle-title">Blur background</p>
+                <p class="toggle-sub">Soft blur before the frame overlay.</p>
+              </div>
+            </div>
+            <div class="btn-row">
+              <button id="resetPhotoBtn" type="button" class="ghost">Reset photo position</button>
+            </div>
+            <p class="note">Tip: drag the photo directly on the canvas to re-center it.</p>
           </div>
-          <div class="btn-row">
-            <button id="resetPhotoBtn" type="button" class="ghost">Reset photo position</button>
-          </div>
-          <p class="note">Tip: drag the photo directly on the canvas to re-center it.</p>
-        </div>
+        </details>
 
-        <div class="tool-card">
-          <div class="tool-header">
+        <details class="tool-card accordion" data-tour="text-controls">
+          <summary class="accordion-summary">
             <div>
               <p class="tool-title">Add text</p>
               <p class="tool-desc">Move, recolor, rotate your caption.</p>
             </div>
+            <span class="caret">▾</span>
+          </summary>
+          <div class="accordion-body">
+            <div class="text-row">
+              <input type="text" id="textInput" placeholder="Enter your text">
+              <button id="addTextBtn" type="button">Add text</button>
+              <button id="doneTextBtn" type="button" class="ghost">Done</button>
+            </div>
+            <div class="text-row text-style-row">
+              <label class="sr-only" for="fontFamily">Font</label>
+              <select id="fontFamily" class="font-select">
+                <option value="Roboto, 'Helvetica Neue', Arial, sans-serif">Roboto</option>
+                <option value="'Roboto Slab', 'Helvetica Neue', Arial, sans-serif">Roboto Slab</option>
+                <option value="'Montserrat', 'Helvetica Neue', Arial, sans-serif">Montserrat</option>
+              </select>
+              <div class="style-toggle-group">
+                <button type="button" class="chip" data-style="bold" aria-label="Bold">B</button>
+                <button type="button" class="chip" data-style="italic" aria-label="Italic"><em>I</em></button>
+                <button type="button" class="chip" data-style="underline" aria-label="Underline"><u>U</u></button>
+                <button type="button" class="chip" data-style="strike" aria-label="Strikethrough"><s>S</s></button>
+              </div>
+            </div>
+            <div class="range-row">
+              <label for="textSize">Text size</label>
+              <input type="range" id="textSize" min="14" max="90" value="36">
+              <span class="value" id="textSizeValue">36px</span>
+            </div>
+            <div class="range-row">
+              <label for="textRotation">Text rotation</label>
+              <input type="range" id="textRotation" min="-180" max="180" value="0">
+              <span class="value" id="textRotationValue">0°</span>
+            </div>
+            <div class="color-row" id="colorPalette">
+              <button class="color-swatch active" data-color="#000000" style="background:#000000"></button>
+              <button class="color-swatch" data-color="#ffffff" style="background:#ffffff"></button>
+              <button class="color-swatch" data-color="#f7d002" style="background:#f7d002"></button>
+              <button class="color-swatch" data-color="#ff3d6a" style="background:#ff3d6a"></button>
+              <button class="color-swatch" data-color="#2d7bff" style="background:#2d7bff"></button>
+              <button class="color-swatch" data-color="#0dc99f" style="background:#0dc99f"></button>
+              <button class="color-swatch" data-color="#f97316" style="background:#f97316"></button>
+            </div>
+            <div class="btn-row">
+              <button id="deleteTextBtn" type="button" class="ghost">Remove selected text</button>
+            </div>
+            <p class="note">
+              Click text on the canvas to move it. Use sliders to rotate or resize, then hit Done to lock the selection.
+            </p>
           </div>
-          <div class="text-row">
-            <input type="text" id="textInput" placeholder="Enter your text">
-            <button id="addTextBtn" type="button">Add text</button>
-            <button id="doneTextBtn" type="button" class="ghost">Done</button>
+        </details>
+
+        <details class="tool-card accordion" data-tour="filters">
+          <summary class="accordion-summary">
+            <div>
+              <p class="tool-title">Filters</p>
+              <p class="tool-desc">Apply color moods to the photo and frame.</p>
+            </div>
+            <span class="caret">▾</span>
+          </summary>
+          <div class="accordion-body">
+            <div class="filter-row" id="filterRow">
+              <button class="filter-chip active" data-filter="original">Original</button>
+              <button class="filter-chip" data-filter="calusa">Calusa</button>
+              <button class="filter-chip" data-filter="cannes">Cannes</button>
+              <button class="filter-chip" data-filter="melawai">Melawai</button>
+              <button class="filter-chip" data-filter="mono">Mono</button>
+            </div>
+            <p class="note">Filters affect both the uploaded image and the frame. Text stays crisp.</p>
           </div>
-          <div class="range-row">
-            <label for="textSize">Text size</label>
-            <input type="range" id="textSize" min="14" max="90" value="36">
-            <span class="value" id="textSizeValue">36px</span>
-          </div>
-          <div class="range-row">
-            <label for="textRotation">Text rotation</label>
-            <input type="range" id="textRotation" min="-180" max="180" value="0">
-            <span class="value" id="textRotationValue">0°</span>
-          </div>
-          <div class="color-row" id="colorPalette">
-            <button class="color-swatch active" data-color="#000000" style="background:#000000"></button>
-            <button class="color-swatch" data-color="#ffffff" style="background:#ffffff"></button>
-            <button class="color-swatch" data-color="#f7d002" style="background:#f7d002"></button>
-            <button class="color-swatch" data-color="#ff3d6a" style="background:#ff3d6a"></button>
-            <button class="color-swatch" data-color="#2d7bff" style="background:#2d7bff"></button>
-            <button class="color-swatch" data-color="#0dc99f" style="background:#0dc99f"></button>
-            <button class="color-swatch" data-color="#f97316" style="background:#f97316"></button>
-          </div>
-          <div class="btn-row">
-            <button id="deleteTextBtn" type="button" class="ghost">Remove selected text</button>
-          </div>
-          <p class="note">
-            Click text on the canvas to move it. Use sliders to rotate or resize, then hit Done to lock the selection.
-          </p>
-        </div>
+        </details>
 
         <div class="btn-row">
-          <button id="previewBtn" type="button" class="btn tonal">Update preview</button>
-          <button id="downloadBtn" type="button" class="btn filled" disabled>Download PNG</button>
+          <button id="previewBtn" type="button" class="btn tonal" data-tour="preview">Update preview</button>
+          <button id="downloadBtn" type="button" class="btn filled" disabled data-tour="download">Download PNG</button>
         </div>
       </div>
 
       <div class="preview">
         <div class="canvas-wrap">
-          <canvas id="previewCanvas" width="1080" height="1080"></canvas>
+          <canvas id="previewCanvas" width="1080" height="1080" data-tour="canvas"></canvas>
         </div>
         <div class="status">
           <p id="statusText">Waiting for your photo…</p>
@@ -125,5 +166,6 @@
   </main>
 
   <script src="app.js"></script>
+  <script src="guide.js"></script>
 </body>
 </html>
