fix the button add text

--- a/index.html
+++ b/index.html
@@ -80,10 +80,12 @@
             <span class="caret">▾</span>
           </summary>
           <div class="accordion-body">
-            <div class="text-row">
+            <div class="text-row text-main-row">
               <input type="text" id="textInput" placeholder="Enter your text">
-              <button id="addTextBtn" type="button">Add text</button>
-              <button id="doneTextBtn" type="button" class="ghost">Done</button>
+              <div class="text-actions">
+                <button id="addTextBtn" type="button">Add text</button>
+                <button id="doneTextBtn" type="button" class="ghost">Done</button>
+              </div>
             </div>
             <div class="text-row text-style-row">
               <label class="sr-only" for="fontFamily">Font</label>
