--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Digital Campaign Frame</title>
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="style.css?id=2123">
   <script src="https://cdn.jsdelivr.net/npm/driver.js@latest/dist/driver.js.iife.js"></script>
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/driver.js@latest/dist/driver.css"/>
 </head>
@@ -167,7 +167,7 @@
     </section>
   </main>
 
-  <script src="app.js"></script>
-  <script src="guide.js"></script>
+  <script src="app.js?id=213"></script>
+  <script src="guide.js?id=123"></script>
 </body>
 </html>
