save the frame image

--- a/index.html
+++ b/index.html
@@ -32,6 +32,9 @@
           <label for="frameChooser">Frame</label>
           <select id="frameChooser" data-tour="frame">
             <option value="assets/cambodia-frame.svg">#WeWillNeverForgetOurHero</option>
+            <option value="assets/sunrise-frame.svg">Sunrise Solidarity</option>
+            <option value="assets/solidarity-ribbon-frame.svg">Solidarity Ribbon</option>
+            <option value="assets/minimal-mono-frame.svg">Minimal Mono</option>
           </select>
         </div>
 
