--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Digital Campaign Frame</title>
-  <link rel="stylesheet" href="style.css?id=21233">
+  <link rel="stylesheet" href="style.css?id=1">
   <script src="https://cdn.jsdelivr.net/npm/driver.js@latest/dist/driver.js.iife.js"></script>
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/driver.js@latest/dist/driver.css"/>
 </head>
@@ -132,6 +132,15 @@
               <button class="color-swatch" data-color="#0dc99f" style="background:#0dc99f"></button>
               <button class="color-swatch" data-color="#f97316" style="background:#f97316"></button>
             </div>
+            <!-- <div class="text-row">
+              <label class="sr-only" for="systemColor">System color</label>
+              <select id="systemColor" class="font-select">
+                <option value="">Pick system color</option>
+                <option value="linux">Linux</option>
+                <option value="windows">Windows</option>
+                <option value="macos">macOS</option>
+              </select>
+            </div> -->
             <div class="toggle-row">
               <label class="switch">
                 <input type="checkbox" id="textOverFrame" checked>
@@ -189,7 +198,7 @@
     </section>
   </main>
 
-  <script src="app.js?id=21311"></script>
-  <script src="guide.js?id=1235"></script>
+  <script src="app.js?id=1"></script>
+  <script src="guide.js?id=1"></script>
 </body>
 </html>
